--- a/src/index.html
+++ b/src/index.html
@@ -70,19 +70,19 @@
         <h3>Para mais informações entre em contato</h3>
         <ul>
             <li>
-                <a href="#">
+                <a href="linkedin.com/in/mauricio-sousa-38638417b">
                     <img src="images/whatsapp.png" alt="whatsapp">
                     whatsapp
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="linkedin.com/in/mauricio-sousa-38638417b">
                     <img src="images/facebook.png" alt="facebook">
                     Facebook
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="linkedin.com/in/mauricio-sousa-38638417b">
                     <img src="images/linkedin.png" alt="linkedin">
                     Linkedin
                 </a>
